--- a/index.html
+++ b/index.html
@@ -98,6 +98,23 @@
         .gos-cat-item.active .gos-cat-title { color: var(--kaspi-red); font-weight: 600; }
         .gos-cat-item.active::after { content: ''; position: absolute; bottom: -15px; left: 10px; right: 10px; height: 2px; background: var(--kaspi-red); }
 
+        /* ИЗМЕНЕННЫЙ БЛОК: СТИЛИ ДЛЯ ПОПУЛЯРНОГО И НОВОГО */
+        .gos-list-section { background: white; padding: 0 15px; }
+        .gos-list-title { font-size: 16px; font-weight: 700; padding: 20px 0 10px 0; color: #111; }
+        .gos-list-item {
+            display: flex; align-items: center; padding: 14px 0; border-bottom: 1px solid #f5f5f5; gap: 15px; cursor: pointer;
+        }
+        .gos-list-item:last-child { border-bottom: none; }
+        .gos-list-icon-wrapper {
+            width: 44px; height: 44px; display: flex; align-items: center; justify-content: center; flex-shrink: 0; border-radius: 12px; overflow: hidden; background: transparent;
+        }
+        .gos-list-icon { width: 100%; height: 100%; object-fit: cover; }
+        .gos-list-text { flex: 1; }
+        .gos-list-item-title { font-size: 15px; font-weight: 500; color: #222; margin-bottom: 2px; line-height: 1.2; }
+        .gos-list-item-sub { font-size: 12px; color: var(--gray-text); line-height: 1.3; margin-top: 2px; }
+        .gos-badge { background: var(--kaspi-red); color: white; font-size: 10px; font-weight: 700; padding: 3px 6px; border-radius: 6px; margin-right: 5px; }
+        .gos-arrow { color: #c7c7cc; font-size: 24px; font-weight: 300; margin-top: -2px; }
+
         /* --- ГЛАВНАЯ СТРАНИЦА --- */
         body { background-color: var(--bg-color); margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; user-select: none; padding-top: env(safe-area-inset-top); }
         #app-wrapper { padding-bottom: 80px; }
@@ -193,6 +210,54 @@
                     <div class="gos-cat-item"><div class="gos-cat-icon-bg"><img src="spravki.png" class="gos-cat-icon"></div><div class="gos-cat-title">Справки</div></div>
                     <div class="gos-cat-item"><div class="gos-cat-icon-bg"><img src="avto.png" class="gos-cat-icon"></div><div class="gos-cat-title">Авто</div></div>
                     <div class="gos-cat-item"><div class="gos-cat-icon-bg"><img src="house.png" class="gos-cat-icon"></div><div class="gos-cat-title">Жилье</div></div>
+                </div>
+            </div>
+            
+            <div class="gos-list-section">
+                <div class="gos-list-title">Популярные и новые</div>
+                
+                <div class="gos-list-item" onclick="vibrate()">
+                    <div class="gos-list-icon-wrapper"><img src="samozanyat.png" class="gos-list-icon"></div>
+                    <div class="gos-list-text">
+                        <div class="gos-list-item-title">Стать самозанятым</div>
+                        <div class="gos-list-item-sub">Открыть счет и начать<br>принимать оплату в Kaspi.kz</div>
+                    </div>
+                    <div class="gos-badge">NEW</div>
+                    <div class="gos-arrow">›</div>
+                </div>
+
+                <div class="gos-list-item" onclick="vibrate()">
+                    <div class="gos-list-icon-wrapper"><img src="izmenenierekvizitov.png" class="gos-list-icon"></div>
+                    <div class="gos-list-text">
+                        <div class="gos-list-item-title">Изменение реквизитов<br>и налогового режима ИП</div>
+                    </div>
+                    <div class="gos-badge">NEW</div>
+                    <div class="gos-arrow">›</div>
+                </div>
+
+                <div class="gos-list-item" onclick="vibrate()">
+                    <div class="gos-list-icon-wrapper"><img src="pereofomravto.png" class="gos-list-icon"></div>
+                    <div class="gos-list-text">
+                        <div class="gos-list-item-title">Переоформление автомобиля</div>
+                    </div>
+                    <div class="gos-arrow">›</div>
+                </div>
+
+                <div class="gos-list-item" onclick="vibrate()">
+                    <div class="gos-list-icon-wrapper"><img src="propiska.png" class="gos-list-icon"></div>
+                    <div class="gos-list-text">
+                        <div class="gos-list-item-title">Прописка</div>
+                        <div class="gos-list-item-sub">Временная и постоянная</div>
+                    </div>
+                    <div class="gos-arrow">›</div>
+                </div>
+
+                <div class="gos-list-item" onclick="vibrate()">
+                    <div class="gos-list-icon-wrapper"><img src="zamenaprav.png" class="gos-list-icon"></div>
+                    <div class="gos-list-text">
+                        <div class="gos-list-item-title">Замена водительских прав</div>
+                    </div>
+                    <div class="gos-arrow">›</div>
                 </div>
             </div>
         </div>
@@ -309,6 +374,7 @@
             modal.classList.remove('active');
             setTimeout(() => modal.style.display = 'none', 300);
         }
+        function vibrate() { tg.HapticFeedback.impactOccurred('light'); }
     </script>
 </body>
 </html>
