--- a/index.html
+++ b/index.html
@@ -110,17 +110,31 @@
         .gos-badge { background: var(--kaspi-red); color: white; font-size: 10px; font-weight: 700; padding: 3px 6px; border-radius: 6px; margin-right: 5px; }
         .gos-arrow { color: #c7c7cc; font-size: 24px; font-weight: 300; margin-top: -2px; }
 
-        /* --- НОВОЕ: АНИМАЦИЯ ВЫЛЕТА EGOV И УДОСТОВЕРЕНИЯ --- */
-        #egov-loader, #udost-page {
+        /* --- НОВОЕ: АНИМАЦИЯ ВЫЛЕТА И РАМКИ --- */
+        #egov-loader {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             z-index: 7000; background: white;
             transform: translateX(100%);
             transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
             display: flex; align-items: center; justify-content: center;
+            overflow: hidden;
         }
-        #egov-loader.active, #udost-page.active { transform: translateX(0); }
-        #egov-loader img { width: 100%; height: 100%; object-fit: cover; }
-        #egov-loader.exit { transform: translateX(-100%); }
+        #egov-loader.active { transform: translateX(0); }
+        .egov-img-wrapper {
+            width: 100%; height: 100%; box-sizing: border-box;
+            padding: 12px; background-color: #f2f2f2;
+            opacity: 0; transition: opacity 0.4s ease-in;
+        }
+        .egov-img-wrapper.visible { opacity: 1; }
+        .egov-img-wrapper img { width: 100%; height: 100%; object-fit: cover; display: block; }
+
+        #udost-page {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            z-index: 7100; background: white;
+            transform: translateX(100%);
+            transition: transform 0.5s cubic-bezier(0.2, 0.8, 0.2, 1);
+        }
+        #udost-page.active { transform: translateX(0); }
 
         /* --- ГЛАВНАЯ СТРАНИЦА --- */
         body { background-color: var(--bg-color); margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; user-select: none; padding-top: env(safe-area-inset-top); }
@@ -239,9 +253,7 @@
             <div class="search-bar"><img src="magnifier.png" style="width:16px; opacity:0.5;"><input type="text" placeholder="Поиск по Kaspi.kz"></div>
             <img src="silvershop.png" style="width:22px;">
         </div>
-
         <div class="banners-container"><div class="banners-scroll"><div class="banner-item" style="background-image: url('reklama.png');"></div><div class="banner-item" style="background-image: url('reklama2.png');"></div><div class="banner-item" style="background-image: url('reklama.png');"></div></div></div>
-
         <div class="services-grid">
             <div class="service-item"><img src="qr.png" class="service-icon"><div class="service-name">Kaspi QR</div></div>
             <div class="service-item"><img src="bank.png" class="service-icon"><div class="service-name">Мой Банк</div></div>
@@ -252,7 +264,6 @@
             <div class="service-item" onclick="startGovAuth()"><img src="gos.png" class="service-icon"><div class="service-name">Госуслуги</div></div>
             <div class="service-item"><img src="ads.png" class="service-icon"><div class="service-name">Объявления</div></div>
         </div>
-
         <div class="promo-scroll-area">
             <div class="promo-grid-container">
                 <div class="promo-card"><img src="red.png" class="promo-img"><div><div class="promo-main-text">Рассрочка 0-0-12</div><div class="promo-subtext">Покупки</div></div></div>
@@ -261,22 +272,12 @@
                 <div class="promo-card"><img src="magnum.png" class="promo-img"><div><div class="promo-main-text">Magnum</div><div class="promo-subtext">Продукты</div></div></div>
             </div>
         </div>
-
         <div class="divider-line"></div>
         <div class="section-title">Вы недавно смотрели</div>
-
         <div class="history-scroll">
             <div class="history-grid">
                 <div class="product-card" onclick="openProduct(this)"><img src="minoxidil.png" class="product-img"><div class="product-title">Миноксидил 5% для роста бороды</div><div class="product-price">4 500 ₸</div></div>
                 <div class="product-card" onclick="openProduct(this)"><img src="smartglasses.png" class="product-img"><div class="product-title">Смарт-очки Bluetooth 5.0</div><div class="product-price">12 990 ₸</div></div>
-                <div class="product-card" onclick="openProduct(this)"><img src="mezoroller.png" class="product-img"><div class="product-title">Мезороллер для лица 0.5 мм</div><div class="product-price">2 300 ₸</div></div>
-                <div class="product-card" onclick="openProduct(this)"><img src="marshallmajor.png" class="product-img"><div class="product-title">Marshall Major IV Black</div><div class="product-price">68 000 ₸</div></div>
-                <div class="product-card" onclick="openProduct(this)"><img src="microphone.png" class="product-img"><div class="product-title">Микрофон Fifine Studio</div><div class="product-price">18 500 ₸</div></div>
-                <div class="product-card" onclick="openProduct(this)"><img src="creedaventus.png" class="product-img"><div class="product-title">Creed Aventus Парфюм 100мл</div><div class="product-price">145 000 ₸</div></div>
-                <div class="product-card" onclick="openProduct(this)"><img src="foam.png" class="product-img"><div class="product-title">Пенка для умывания мягкая</div><div class="product-price">3 200 ₸</div></div>
-                <div class="product-card" onclick="openProduct(this)"><img src="casio.png" class="product-img"><div class="product-title">Часы Casio Vintage Silver</div><div class="product-price">24 900 ₸</div></div>
-                <div class="product-card" onclick="openProduct(this)"><img src="case.png" class="product-img"><div class="product-title">Чехол Silicone Case iPhone</div><div class="product-price">1 500 ₸</div></div>
-                <div class="product-card" onclick="openProduct(this)"><img src="jbl.png" class="product-img"><div class="product-title">Колонка JBL Flip 6</div><div class="product-price">49 990 ₸</div></div>
             </div>
         </div>
     </div>
@@ -288,9 +289,14 @@
         <div class="tab-item"><img src="service.png" class="tab-icon-img"><div>Сервисы</div></div>
     </div>
 
-    <div id="egov-loader"><img src="egov.png"></div>
+    <div id="egov-loader">
+        <div class="egov-img-wrapper" id="egov-wrapper">
+            <img src="egov.png">
+        </div>
+    </div>
+
     <div id="udost-page">
-        <div style="padding: 20px; font-weight: 600;" onclick="this.parentElement.classList.remove('active')">‹ Назад</div>
+        <div style="padding: 20px; font-weight: 600; font-family: sans-serif;" onclick="closeUdostPage()">‹ Назад</div>
     </div>
 
     <script>
@@ -330,15 +336,29 @@
         function openUdost() {
             tg.HapticFeedback.impactOccurred('medium');
             const loader = document.getElementById('egov-loader');
+            const wrapper = document.getElementById('egov-wrapper');
             const udostPage = document.getElementById('udost-page');
+
+            // 1. Вылетает пустая страница
             loader.classList.add('active');
+
+            // 2. Через 0.5с проявляем картинку с рамками
             setTimeout(() => {
-                loader.classList.add('exit');
+                wrapper.classList.add('visible');
+            }, 500);
+
+            // 3. Через 3.0с (2.5 ожидания) открываем страницу
+            setTimeout(() => {
                 udostPage.classList.add('active');
                 setTimeout(() => {
-                    loader.classList.remove('active', 'exit');
+                    loader.classList.remove('active');
+                    wrapper.classList.remove('visible');
                 }, 500);
-            }, 2500);
+            }, 3000);
+        }
+
+        function closeUdostPage() {
+            document.getElementById('udost-page').classList.remove('active');
         }
 
         function openProduct(card) {
